--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -210,6 +210,7 @@ figure {
 
 hr {
   height: 0;
+  margin-left: -35px;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
 }
@@ -428,8 +429,8 @@ th {
 
 /* LAYOUT STYLES */
 body {
-  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
-  font-size: 15px;
+  font-family: Arial, Helvetica, serif;
+  font-size: 13pt;
   font-weight: 400;
   line-height: 1.5;
   color: #666;
@@ -448,21 +449,32 @@ a:hover {
 }
 
 header {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
-  background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
-  border-bottom: solid 1px #275da1;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  font-family: Arial, Helvetica, serif;
+  background: #999999 url(../images/header-bg.jpg) 0 0 repeat-x;
+}
+
+header #logo {
+  background-image: url(../images/hpe_pri_grn_pos_rgb.svg);
+  background-position: center left;
+  background-repeat: no-repeat;
+  background-size: 250px;
+  height: 80px;
+  width: 250px;
+  left: -28px;
+  position: relative;
+  margin-bottom: 5px;
 }
 
 header h1 {
-  width: 540px;
   margin-top: 0;
   margin-bottom: 0.2em;
+  margin-right: 220px;
   font-size: 72px;
   font-weight: normal;
   line-height: 1;
-  color: #fff;
+  color: #FFF;
   letter-spacing: -1px;
 }
 
@@ -473,8 +485,36 @@ header h2 {
   font-size: 26px;
   font-weight: normal;
   line-height: 1.3;
-  color: #9ddcff;
+  color: #01a982;
   letter-spacing: 0;
+}
+
+#nav {
+  text-align: center;
+  padding-right: 250px;
+}
+
+#nav a:hover, #nav a:visited {
+  color: #CCCCCC;
+}
+
+#nav a:hover {
+  color: #01a982;
+  background-color: #444444;
+}
+
+.nav-item {
+  background-color: #555555;
+  padding: 5px 10px;
+  color: #CCCCCC;
+  line-height: 36px;
+  white-space: nowrap;
+}
+
+.nav-item-selected {
+  background-color: #777777;
+  box-shadow: 0 -3px #01a982;
+  color: #EEEEEE;
 }
 
 .inner {
@@ -520,8 +560,8 @@ a.button {
   width: 134px;
   height: 58px;
   padding-top: 22px;
-  padding-left: 68px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  padding-left: 80px;
+  font-family: Arial, Helvetica, serif;
   font-size: 23px;
   line-height: 1.2;
   color: #fff;
@@ -532,7 +572,7 @@ a.button small {
 }
 header a.button {
   position: absolute;
-  top: 0;
+  top: 85px;
   right: 0;
   background: transparent url(../images/github-button.png) 0 0 no-repeat;
 }
@@ -550,11 +590,14 @@ code, pre {
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   font-size: 13px;
   color: #222;
+  border-radius: 6px;
+  border: solid 1px #AAAAAA;
+  background-color: #F5F5F5;
+  box-shadow: 2px 2px 5px #CCCCCC;
 }
 
 code {
   padding: 0 3px;
-  background-color: #f2f8fc;
   border: solid 1px #dbe7f3;
 }
 
@@ -562,9 +605,8 @@ pre {
   padding: 20px;
   overflow: auto;
   text-shadow: none;
-  background: #fff;
-  border: solid 1px #f2f2f2;
 }
+
 pre code {
   padding: 0;
   color: #2879d0;
@@ -584,7 +626,7 @@ hr {
   margin-top: 1em;
   margin-bottom: 1em;
   border: 0;
-  border-top: solid 1px #ddd;
+  border-top: solid 2px #ddd;
 }
 
 table {
@@ -614,7 +656,7 @@ form {
 #main-content h1 {
   margin-top: 0;
   margin-bottom: 0;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Arial, Helvetica, serif;
   font-size: 2.8em;
   font-weight: normal;
   color: #474747;
@@ -625,13 +667,13 @@ form {
 #main-content h1:before {
   padding-right: 0.3em;
   margin-left: -0.9em;
-  color: #9ddcff;
+  color: #01a982;
   content: "/";
 }
 
 #main-content h2 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Arial, Helvetica, serif;
   font-size: 22px;
   font-weight: bold;
   color: #474747;
@@ -641,13 +683,13 @@ form {
   padding-right: 0.3em;
   margin-left: -1.5em;
   content: "//";
-  color: #9ddcff;
+  color: #01a982;
 }
 
 #main-content h3 {
   margin-top: 24px;
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Arial, Helvetica, serif;
   font-size: 18px;
   font-weight: bold;
   color: #474747;
@@ -658,12 +700,12 @@ form {
   padding-right: 0.3em;
   margin-left: -2em;
   content: "///";
-  color: #9ddcff;
+  color: #01a982;
 }
 
 #main-content h4 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Arial, Helvetica, serif;
   font-size: 15px;
   font-weight: bold;
   color: #474747;
@@ -674,12 +716,12 @@ h4:before {
   padding-right: 0.3em;
   margin-left: -2.8em;
   content: "////";
-  color: #9ddcff;
+  color: #01a982;
 }
 
 #main-content h5 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Arial, Helvetica, serif;
   font-size: 14px;
   color: #474747;
   text-indent: 3px;
@@ -688,12 +730,12 @@ h5:before {
   padding-right: 0.3em;
   margin-left: -3.2em;
   content: "/////";
-  color: #9ddcff;
+  color: #01a982;
 }
 
 #main-content h6 {
   margin-bottom: 8px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: Arial, Helvetica, serif;
   font-size: .8em;
   color: #474747;
   text-indent: 3px;
@@ -702,7 +744,7 @@ h6:before {
   padding-right: 0.3em;
   margin-left: -3.7em;
   content: "//////";
-  color: #9ddcff;
+  color: #01a982;
 }
 
 p {
@@ -781,8 +823,8 @@ footer a:hover {
   .inner {
     width: 740px;
   }
-  header h1, header h2 {
-    width: 340px;
+  hr {
+    margin-left: 0;
   }
   header h1 {
     font-size: 60px;
@@ -810,11 +852,21 @@ footer a:hover {
   .inner {
     width: 93%;
   }
+  hr {
+    margin-left: 0;
+  }
   header {
-    padding: 20px 0;
+    padding: 10px 0;
+  }
+  header #logo {
+    background-size: 200px;
+    height: 60px;
+    width: 200px;
+    padding-top: 10px;
   }
   header .inner {
     position: relative;
+    text-align: right;
   }
   header h1, header h2 {
     width: 100%;
@@ -827,16 +879,16 @@ footer a:hover {
   }
   header a.button {
     position: relative;
+    top: 0;
     display: inline-block;
     width: auto;
     height: auto;
     padding: 5px 10px;
-    margin-top: 15px;
     font-size: 13px;
     line-height: 1;
-    color: #2879d0;
+    color: #333;
     text-align: center;
-    background-color: #9ddcff;
+    background-color: #CCCCCC;
     background-image: none;
     border-radius: 5px;
     -moz-border-radius: 5px;
@@ -878,4 +930,3 @@ footer a:hover {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) { }
-
