--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -10,6 +10,9 @@ html {
   font-family: sans-serif; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
   -ms-text-size-adjust: 100%; /* 2 */
+  overflow-x: hidden;
+  overflow-y: auto;
+  width: 100%;
 }
 
 /**
@@ -572,7 +575,7 @@ a.button small {
 }
 header a.button {
   position: absolute;
-  top: 85px;
+  top: 0;
   right: 0;
   background: transparent url(../images/github-button.png) 0 0 no-repeat;
 }
