--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -459,7 +459,7 @@ header {
 }
 
 header #logo {
-  background-image: url(../images/hpe_pri_grn_pos_rgb.svg);
+  background-image: url(../images/logo.png);
   background-position: center left;
   background-repeat: no-repeat;
   background-size: 250px;
@@ -575,7 +575,7 @@ a.button small {
 }
 header a.button {
   position: absolute;
-  top: 0;
+  top: 85px;
   right: 0;
   background: transparent url(../images/github-button.png) 0 0 no-repeat;
 }
@@ -826,6 +826,9 @@ footer a:hover {
   .inner {
     width: 740px;
   }
+  #nav {
+    padding-right: 150px;
+  }
   hr {
     margin-left: 0;
   }
@@ -854,6 +857,9 @@ footer a:hover {
 @media only screen and (max-width: 767px) {
   .inner {
     width: 93%;
+  }
+  #nav {
+    padding-right: 0;
   }
   hr {
     margin-left: 0;
