--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -473,7 +473,6 @@ header #logo {
 header h1 {
   margin-top: 0;
   margin-bottom: 0.2em;
-  margin-right: 220px;
   font-size: 72px;
   font-weight: normal;
   line-height: 1;
@@ -482,10 +481,9 @@ header h1 {
 }
 
 header h2 {
-  width: 540px;
   margin-top: 0;
   margin-bottom: 0;
-  font-size: 26px;
+  font-size: 35px;
   font-weight: normal;
   line-height: 1.3;
   color: #01a982;
@@ -542,7 +540,7 @@ header h2 {
 
 aside#sidebar {
   float: right;
-  width: 200px;
+  width: 225px;
   min-height: 504px;
   padding-left: 20px;
   font-size: 12px;
@@ -550,20 +548,11 @@ aside#sidebar {
   background: transparent url(../images/sidebar-bg.jpg) 0 0 no-repeat;
 }
 
-aside#sidebar p.repo-owner,
-aside#sidebar p.repo-owner a {
-  font-weight: bold;
-}
-
-#downloads {
-  margin-bottom: 40px;
-}
-
 a.button {
   width: 134px;
-  height: 58px;
+  height: 65px;
   padding-top: 22px;
-  padding-left: 80px;
+  padding-left: 105px;
   font-family: Arial, Helvetica, serif;
   font-size: 23px;
   line-height: 1.2;
@@ -571,21 +560,15 @@ a.button {
 }
 a.button small {
   display: block;
-  font-size: 11px;
+  font-size: 10pt;
 }
-header a.button {
-  position: absolute;
-  top: 85px;
-  right: 0;
-  background: transparent url(../images/github-button.png) 0 0 no-repeat;
-}
+
 aside a.button {
   display: block;
-  width: 138px;
-  padding-left: 64px;
+  width: 135px;
   margin-bottom: 20px;
-  font-size: 21px;
-  background: transparent url(../images/download-button.png) 0 0 no-repeat;
+  font-size: 18pt;
+  background: transparent url(../images/github.png) 0 0 no-repeat;
 }
 
 code, pre {
@@ -656,11 +639,22 @@ form {
 
 /* GENERAL ELEMENT TYPE STYLES */
 
+#main-content h1:before,
+#main-content h2:before,
+#main-content h3:before,
+#main-content h4:before,
+#main-content h5:before,
+#main-content h6:before {
+  padding-right: 3px;
+  margin-left: -15px;
+  color: #01a982;
+}
+
 #main-content h1 {
   margin-top: 0;
   margin-bottom: 0;
   font-family: Arial, Helvetica, serif;
-  font-size: 2.8em;
+  font-size: 2.5em;
   font-weight: normal;
   color: #474747;
   text-indent: 6px;
@@ -668,25 +662,19 @@ form {
 }
 
 #main-content h1:before {
-  padding-right: 0.3em;
-  margin-left: -0.9em;
-  color: #01a982;
   content: "/";
 }
 
 #main-content h2 {
   margin-bottom: 8px;
   font-family: Arial, Helvetica, serif;
-  font-size: 22px;
+  font-size: 1.5em;
   font-weight: bold;
   color: #474747;
   text-indent: 4px;
 }
 #main-content h2:before {
-  padding-right: 0.3em;
-  margin-left: -1.5em;
   content: "//";
-  color: #01a982;
 }
 
 #main-content h3 {
@@ -700,10 +688,7 @@ form {
 }
 
 #main-content h3:before {
-  padding-right: 0.3em;
-  margin-left: -2em;
   content: "///";
-  color: #01a982;
 }
 
 #main-content h4 {
@@ -716,10 +701,7 @@ form {
 }
 
 h4:before {
-  padding-right: 0.3em;
-  margin-left: -2.8em;
   content: "////";
-  color: #01a982;
 }
 
 #main-content h5 {
@@ -730,10 +712,7 @@ h4:before {
   text-indent: 3px;
 }
 h5:before {
-  padding-right: 0.3em;
-  margin-left: -3.2em;
   content: "/////";
-  color: #01a982;
 }
 
 #main-content h6 {
@@ -744,10 +723,7 @@ h5:before {
   text-indent: 3px;
 }
 h6:before {
-  padding-right: 0.3em;
-  margin-left: -3.7em;
   content: "//////";
-  color: #01a982;
 }
 
 p {
@@ -836,20 +812,10 @@ footer a:hover {
     font-size: 60px;
   }
   header h2 {
-    font-size: 30px;
+    font-size: 40px;
   }
   #main-content {
     width: 490px;
-  }
-  #main-content h1:before,
-  #main-content h2:before,
-  #main-content h3:before,
-  #main-content h4:before,
-  #main-content h5:before,
-  #main-content h6:before {
-    padding-right: 0;
-    margin-left: 0;
-    content: none;
   }
 }
 
@@ -875,37 +841,10 @@ footer a:hover {
   }
   header .inner {
     position: relative;
-    text-align: right;
-  }
-  header h1, header h2 {
-    width: 100%;
   }
   header h1 {
+    width: 100%;
     font-size: 48px;
-  }
-  header h2 {
-    font-size: 24px;
-  }
-  header a.button {
-    position: relative;
-    top: 0;
-    display: inline-block;
-    width: auto;
-    height: auto;
-    padding: 5px 10px;
-    font-size: 13px;
-    line-height: 1;
-    color: #333;
-    text-align: center;
-    background-color: #CCCCCC;
-    background-image: none;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-  }
-  header a.button small {
-    display: inline;
-    font-size: 13px;
   }
   #main-content,
   aside#sidebar {
@@ -914,13 +853,18 @@ footer a:hover {
   }
   aside#sidebar {
     min-height: 0;
-    padding: 20px 0;
-    margin-top: 20px;
     background-image: none;
-    border-top: solid 1px #ddd;
+    border-bottom: solid 1px #ddd;
   }
   aside#sidebar a.button {
-    display: none;
+    margin-top: -20px;
+    margin-left: auto;
+    margin-right: auto;
+    background-size: 80%;
+    padding-top: 12px;
+    padding-left: 65px;
+    font-size: 16pt;
+    height: 50px;
   }
   #main-content h1:before,
   #main-content h2:before,
@@ -928,9 +872,9 @@ footer a:hover {
   #main-content h4:before,
   #main-content h5:before,
   #main-content h6:before {
-    padding-right: 0;
-    margin-left: 0;
-    content: none;
+    margin-left: -14px;
+    padding-right: 3px;
+    color: #01a982;
   }
 }
 
